--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,7 +12,7 @@ jobs:
           submodules: recursive
 
       - name: Configure
-        run: cmake . -G Ninja -DCMAKE_CXX_COMPILER:FILEPATH="C:/PROGRAM FILES/MICROSOFT VISUAL STUDIO/2022/ENTERPRISE/VC/Tools/Llvm/x64/bin/clang.exe" -DCMAKE_MAKE_PROGRAM="C:/PROGRAM FILES/MICROSOFT VISUAL STUDIO/2022/ENTERPRISE/COMMON7/IDE/COMMONEXTENSIONS/MICROSOFT/CMAKE/Ninja/ninja.exe"
+        run: cmake . -G Ninja -DBUILD_TESTS=TRUE -DCMAKE_CXX_COMPILER:FILEPATH="C:/PROGRAM FILES/MICROSOFT VISUAL STUDIO/2022/ENTERPRISE/VC/Tools/Llvm/x64/bin/clang.exe" -DCMAKE_MAKE_PROGRAM="C:/PROGRAM FILES/MICROSOFT VISUAL STUDIO/2022/ENTERPRISE/COMMON7/IDE/COMMONEXTENSIONS/MICROSOFT/CMAKE/Ninja/ninja.exe"
 
       - name: Build
         run: cmake --build . --config Release
